adds working auth middleware

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data source=datingapp.db"
   },
+  "TokenKey": "This is a ridiculous key but it's okay for dev",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
